tests/machine/x/cpp/string_prefix_slice.error
line 17: /workspace/mochi/tests/machine/x/cpp/string_prefix_slice.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/string_prefix_slice.cpp:17:18: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
   17 |     print((s1[0] == prefix));
      |            ~~~~~~^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/string_prefix_slice.cpp:19:18: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
   19 |     print((s2[0] == prefix));
      |            ~~~~~~^~~~~~~~~

 16 |     auto s1 = "forest";
 17 |     print((s1[0] == prefix));
 18 |     auto s2 = "desert";
